Add initial configs for Debian packaging

--- a/install
+++ b/install
@@ -80,13 +80,17 @@ link "${DOTFILES_DIRECTORY}/.Xresources"    ".Xresources"
 link "${DOTFILES_DIRECTORY}/.ackrc"         ".ackrc"
 link "${DOTFILES_DIRECTORY}/.bash_aliases"  ".bash_aliases"
 link "${DOTFILES_DIRECTORY}/.ctags"         ".ctags"
+link "${DOTFILES_DIRECTORY}/.dput.cf"       ".dput.cf"
 link "${DOTFILES_DIRECTORY}/.editrc"        ".editrc"
+link "${DOTFILES_DIRECTORY}/.gbp.conf"      ".gbp.conf"
 link "${DOTFILES_DIRECTORY}/.gitconfig"     ".gitconfig"
 link "${DOTFILES_DIRECTORY}/.gitignore"     ".gitignore"
+link "${DOTFILES_DIRECTORY}/.gitk"          ".gitk"
 link "${DOTFILES_DIRECTORY}/.gitmessage"    ".gitmessage"
 link "${DOTFILES_DIRECTORY}/.gitmodules"    ".gitmodules"
 link "${DOTFILES_DIRECTORY}/.inputrc"       ".inputrc"
-link "${DOTFILES_DIRECTORY}/.pentadactylrc" ".pentadactylrc"
+link "${DOTFILES_DIRECTORY}/.quiltrc"       ".quiltrc"
+link "${DOTFILES_DIRECTORY}/.reportbugrc"   ".reportbugrc"
 link "${DOTFILES_DIRECTORY}/.reportbugrc"   ".reportbugrc"
 link "${DOTFILES_DIRECTORY}/.xbindkeysrc"   ".xbindkeysrc"
 link "${DOTFILES_DIRECTORY}/.xinitrc"       ".xinitrc"
