--- a/install
+++ b/install
@@ -80,6 +80,7 @@ link "${DOTFILES_DIRECTORY}/.Xresources"    ".Xresources"
 link "${DOTFILES_DIRECTORY}/.ackrc"         ".ackrc"
 link "${DOTFILES_DIRECTORY}/.bash_aliases"  ".bash_aliases"
 link "${DOTFILES_DIRECTORY}/.ctags"         ".ctags"
+link "${DOTFILES_DIRECTORY}/.dircolors"     ".dircolors"
 link "${DOTFILES_DIRECTORY}/.dput.cf"       ".dput.cf"
 link "${DOTFILES_DIRECTORY}/.editrc"        ".editrc"
 link "${DOTFILES_DIRECTORY}/.gbp.conf"      ".gbp.conf"
