vim: Add default .ycm_extra_conf.py for Vim/YouCompleteMe

--- a/install
+++ b/install
@@ -76,26 +76,27 @@ link "${DOTFILES_DIRECTORY}/bin" "bin"
 #
 # Remaining dotfiles setup
 echo "Configuring remaining dotfiles..."
-link "${DOTFILES_DIRECTORY}/.Xresources"    ".Xresources"
-link "${DOTFILES_DIRECTORY}/.ackrc"         ".ackrc"
-link "${DOTFILES_DIRECTORY}/.bash_aliases"  ".bash_aliases"
-link "${DOTFILES_DIRECTORY}/.ctags"         ".ctags"
-link "${DOTFILES_DIRECTORY}/.dircolors"     ".dircolors"
-link "${DOTFILES_DIRECTORY}/.dput.cf"       ".dput.cf"
-link "${DOTFILES_DIRECTORY}/.editrc"        ".editrc"
-link "${DOTFILES_DIRECTORY}/.gbp.conf"      ".gbp.conf"
-link "${DOTFILES_DIRECTORY}/.gitconfig"     ".gitconfig"
-link "${DOTFILES_DIRECTORY}/.gitignore"     ".gitignore"
-link "${DOTFILES_DIRECTORY}/.gitk"          ".gitk"
-link "${DOTFILES_DIRECTORY}/.gitmessage"    ".gitmessage"
-link "${DOTFILES_DIRECTORY}/.gitmodules"    ".gitmodules"
-link "${DOTFILES_DIRECTORY}/.inputrc"       ".inputrc"
-link "${DOTFILES_DIRECTORY}/.quiltrc"       ".quiltrc"
-link "${DOTFILES_DIRECTORY}/.reportbugrc"   ".reportbugrc"
-link "${DOTFILES_DIRECTORY}/.reportbugrc"   ".reportbugrc"
-link "${DOTFILES_DIRECTORY}/.xbindkeysrc"   ".xbindkeysrc"
-link "${DOTFILES_DIRECTORY}/.xinitrc"       ".xinitrc"
-link "${DOTFILES_DIRECTORY}/.xinitrc.xfce4" ".xinitrc.xfce4"
+link "${DOTFILES_DIRECTORY}/.Xresources"        ".Xresources"
+link "${DOTFILES_DIRECTORY}/.ackrc"             ".ackrc"
+link "${DOTFILES_DIRECTORY}/.bash_aliases"      ".bash_aliases"
+link "${DOTFILES_DIRECTORY}/.ctags"             ".ctags"
+link "${DOTFILES_DIRECTORY}/.dircolors"         ".dircolors"
+link "${DOTFILES_DIRECTORY}/.dput.cf"           ".dput.cf"
+link "${DOTFILES_DIRECTORY}/.editrc"            ".editrc"
+link "${DOTFILES_DIRECTORY}/.gbp.conf"          ".gbp.conf"
+link "${DOTFILES_DIRECTORY}/.gitconfig"         ".gitconfig"
+link "${DOTFILES_DIRECTORY}/.gitignore"         ".gitignore"
+link "${DOTFILES_DIRECTORY}/.gitk"              ".gitk"
+link "${DOTFILES_DIRECTORY}/.gitmessage"        ".gitmessage"
+link "${DOTFILES_DIRECTORY}/.gitmodules"        ".gitmodules"
+link "${DOTFILES_DIRECTORY}/.inputrc"           ".inputrc"
+link "${DOTFILES_DIRECTORY}/.quiltrc"           ".quiltrc"
+link "${DOTFILES_DIRECTORY}/.reportbugrc"       ".reportbugrc"
+link "${DOTFILES_DIRECTORY}/.reportbugrc"       ".reportbugrc"
+link "${DOTFILES_DIRECTORY}/.xbindkeysrc"       ".xbindkeysrc"
+link "${DOTFILES_DIRECTORY}/.xinitrc"           ".xinitrc"
+link "${DOTFILES_DIRECTORY}/.xinitrc.xfce4"     ".xinitrc.xfce4"
+link "${DOTFILES_DIRECTORY}/.ycm_extra_conf.py" ".ycm_extra_conf.py"
 
 # Set default shell to Zsh
 echo ""
