install: sync dotfiles

--- a/install
+++ b/install
@@ -157,9 +157,10 @@ install_dotfiles() {
   link "${DOTFILES_DIRECTORY}/.gitk"              ".gitk"
   link "${DOTFILES_DIRECTORY}/.gitmessage"        ".gitmessage"
   link "${DOTFILES_DIRECTORY}/.inputrc"           ".inputrc"
+  link "${DOTFILES_DIRECTORY}/.pentadactylrc"     ".pentadactylrc"
   link "${DOTFILES_DIRECTORY}/.quiltrc"           ".quiltrc"
   link "${DOTFILES_DIRECTORY}/.reportbugrc"       ".reportbugrc"
-  link "${DOTFILES_DIRECTORY}/.reportbugrc"       ".reportbugrc"
+  link "${DOTFILES_DIRECTORY}/.tmux.conf"         ".tmux.conf"
   link "${DOTFILES_DIRECTORY}/.xbindkeysrc"       ".xbindkeysrc"
   link "${DOTFILES_DIRECTORY}/.xinitrc"           ".xinitrc"
   link "${DOTFILES_DIRECTORY}/.xinitrc.xfce4"     ".xinitrc.xfce4"
