ctags: configure for general use, Vim and Git
- default ctags config
- git ctags alias and hooks for checkout/commit/merge/rebase
- vim tags support (native and Tagbar)
- updated dotfiles dependencies meta-package
- updated install script for default git template
- updated README

--- a/install
+++ b/install
@@ -142,6 +142,10 @@ install_dotfiles() {
   echo "  Configuring scripts directory..."
   link "${DOTFILES_DIRECTORY}/bin"                "bin"
 
+  # git template/hooks dir setup
+  echo "  Configuring git template/hooks directory..."
+  link "${DOTFILES_DIRECTORY}/.git_template"      ".git_template"
+
   # Remaining dotfiles setup
   echo "  Configuring symlinks"
   link "${DOTFILES_DIRECTORY}/.Xresources"        ".Xresources"
