--- a/install
+++ b/install
@@ -156,6 +156,7 @@ install_dotfiles() {
   link "${DOTFILES_DIRECTORY}/.bash_aliases"      ".bash_aliases"
   link "${DOTFILES_DIRECTORY}/.ctags"             ".ctags"
   link "${DOTFILES_DIRECTORY}/.dircolors"         ".dircolors"
+  link "${DOTFILES_DIRECTORY}/.dpt.conf"          ".dpt.conf"
   link "${DOTFILES_DIRECTORY}/.dput.cf"           ".dput.cf"
   link "${DOTFILES_DIRECTORY}/.editrc"            ".editrc"
   link "${DOTFILES_DIRECTORY}/.gbp.conf"          ".gbp.conf"
