--- a/install
+++ b/install
@@ -166,6 +166,7 @@ install_dotfiles() {
   link "${DOTFILES_DIRECTORY}/.gitmessage"        ".gitmessage"
   link "${DOTFILES_DIRECTORY}/.inputrc"           ".inputrc"
   link "${DOTFILES_DIRECTORY}/.lintianrc"         ".lintianrc"
+  link "${DOTFILES_DIRECTORY}/.pbuilderrc"        ".pbuilderrc"
   link "${DOTFILES_DIRECTORY}/.pentadactylrc"     ".pentadactylrc"
   link "${DOTFILES_DIRECTORY}/.quiltrc"           ".quiltrc"
   link "${DOTFILES_DIRECTORY}/.reportbugrc"       ".reportbugrc"
