--- a/install
+++ b/install
@@ -174,6 +174,7 @@ install_dotfiles() {
   link "${DOTFILES_DIRECTORY}/.Xresources"        ".Xresources"
   link "${DOTFILES_DIRECTORY}/.abcde.conf"        ".abcde.conf"
   link "${DOTFILES_DIRECTORY}/.ackrc"             ".ackrc"
+  link "${DOTFILES_DIRECTORY}/.agignore"          ".agignore"
   link "${DOTFILES_DIRECTORY}/.bash_aliases"      ".bash_aliases"
   link "${DOTFILES_DIRECTORY}/.ctags"             ".ctags"
   link "${DOTFILES_DIRECTORY}/.dircolors"         ".dircolors"
