--- a/install
+++ b/install
@@ -14,7 +14,7 @@ XDG_CONFIG_DIRECTORY="${HOME}/.config"
 FZF_DIRECTORY="${HOME}/.fzf"
 
 #---------------------------- available modules ------------------------------
-available_modules=("i3" "prezto" "tmux" "vim" "irssi" "fonts" "dotfiles")
+available_modules=("i3" "prezto" "tmux" "vim" "irssi" "fonts" "dotfiles" "ranger")
 
 #---------------------------- requested modules ------------------------------
 requested_modules="$@"
@@ -164,6 +164,13 @@ configure_i3() {
   link "${DOTFILES_DIRECTORY}/.config/i3blocks" ".config/i3blocks"
 }
 
+#---------------------------------- ranger -----------------------------------
+configure_ranger() {
+  echo "  Configuring..."
+  mkdir -p ${XDG_CONFIG_DIRECTORY}
+  link "${DOTFILES_DIRECTORY}/.config/ranger" ".config/ranger"
+}
+
 #----------------------------------- fzf -------------------------------------
 
 download_fzf() {
@@ -260,6 +267,10 @@ install_tmux() {
 install_i3() {
     download_i3blocks_contrib
     configure_i3
+}
+
+install_ranger() {
+    configure_ranger
 }
 
 install_fzf() {
