abcde: add 'abcdef' alias to convert to mp3+flac
- update default abcde config to convert to mp3 only

--- a/install
+++ b/install
@@ -207,6 +207,7 @@ symlink_dotfiles() {
   echo "  Configuring symlinks"
   link "${DOTFILES_DIRECTORY}/.Xresources"        ".Xresources"
   link "${DOTFILES_DIRECTORY}/.abcde.conf"        ".abcde.conf"
+  link "${DOTFILES_DIRECTORY}/.abcdef.conf"       ".abcdef.conf"
   link "${DOTFILES_DIRECTORY}/.bash_aliases"      ".bash_aliases"
   link "${DOTFILES_DIRECTORY}/.caffrc"            ".caffrc"
   link "${DOTFILES_DIRECTORY}/.ctags"             ".ctags"
