install: install local devscripts config

--- a/install
+++ b/install
@@ -211,6 +211,7 @@ symlink_dotfiles() {
   link "${DOTFILES_DIRECTORY}/.bash_aliases"      ".bash_aliases"
   link "${DOTFILES_DIRECTORY}/.caffrc"            ".caffrc"
   link "${DOTFILES_DIRECTORY}/.ctags"             ".ctags"
+  link "${DOTFILES_DIRECTORY}/.devscripts"        ".devscripts"
   link "${DOTFILES_DIRECTORY}/.dircolors"         ".dircolors"
   link "${DOTFILES_DIRECTORY}/.dpt.conf"          ".dpt.conf"
   link "${DOTFILES_DIRECTORY}/.editrc"            ".editrc"
